--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <div class="container-fluid" id="mainContainer">
         <div class="row">
             <!--Left Card - Contains Input & Input Button-->
-            <div class="card" id="leftCard" class="col-xs-4">
+            <div id="leftCard" class="col-xs-6 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="padding-bottom: 15px;">
                 <br>
                 <p style="margin-left: 30px; font-size: 24px; margin-bottom: 5px;">Search for a City:</p>
                 <div class="container">
                     <form id="searchForm">
                         <input id="searchInput"
-                            style="margin-left: 10px; width: 200px; height: 45px; border-radius: 5px; margin-bottom: 20px; margin-top: 20px;"
+                            style="margin-left: 10px; width: 250px; height: 45px; border-radius: 5px; margin-bottom: 20px; margin-top: 20px;"
                             class="col-xs-1 col-sm-6 col-md-7 col-lg-8 col-xl-12"></input>
                         <button id="searchBtn"
                             style="height: 45px; width: 50px; border-radius: 5px; background-color: rgb(34, 146, 146); border: gray solid 1px;">
@@ -44,7 +44,7 @@
                 <div class="container" id="innerContainer" style="margin-top: 15px;"></div>
             </div>
             <!--Right Card - Contains Current Weather Container & 5-Day Forecast Container-->
-            <div class="card" id="rightCard" class="col-xs-8">
+            <div id="rightCard" class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
                 <!--Current Weather States Container-->
                 <div class="container" id="weatherStats">
                     <br>
