--- a/index.html
+++ b/index.html
@@ -7,103 +7,101 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="style.css" />
     <title>Weather Dashboard</title>
+    <style>
+        body {
+          background-image: url('https://images.pexels.com/photos/459483/pexels-photo-459483.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=400&w=800');
+        }
+        </style>
 </head>
 
 <!--Document Body-->
 
 <body>
     <!--Header-->
-    <div class="header">
-        <p>Weather Dashboard</p>
-    </div>
-    <!--Main Container-->
-    <div class="container-fluid" id="mainContainer">
-        <div class="row">
-            <!--Left Card - Contains Input & Input Button-->
-            <div id="leftCard" class="col-xs-6 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="padding-bottom: 15px;">
-                <div class="container">
-                    <form id="searchForm">
-                        <input id="searchInput" type="text" class="search" placeholder="City or State"
-                            style="margin-left: 10px; width: 250px; height: 45px; border-radius: 5px; margin-bottom: 20px; margin-top: 20px;"
-                            class="col-xs-1 col-sm-6 col-md-7 col-lg-8 col-xl-12"></input>
-                        <button id="searchBtn"
-                            style="height: 45px; width: 50px; border-radius: 5px; background-color: rgb(34, 146, 146); border: gray solid 1px;">
-                            <i class="fas fa-search" style="color: white;"></i>
-                        </button>
-                        <ul class="suggestions"></ul>
-                    </form>
-                </div>
-                <!--Previous Searches Render Here-->
-                <div class="container" id="innerContainer" style="margin-top: 15px;"></div>
+    <nav style="background-color: #3f3f46;">
+        <div class="nav-wrapper">
+          <form id="searchForm">
+            <div class="input-field">
+              <input id="searchInput" type="search" required>
+              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+              <i class="material-icons">close</i>
             </div>
+          </form>
+        </div>
+      </nav>
+    <!--Main Container-->
+    <div class="container" id="mainContainer">
+        <div class="row">
             <!--Right Card - Contains Current Weather Container & 5-Day Forecast Container-->
-            <div id="rightCard" class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
-                <!--Current Weather States Container-->
-                <div class="container" id="weatherStats">
-                    <br>
-                    <h2 id="cityName"></h2>
-                    <div id="icon"><img id="wicon" src="" alt="Weather icon"></div>
-                    <p id="temperature"></p>
-                    <p id="humidity"></p>
-                    <p id="windSpeed"></p>
-                    <p id="uvIndex"></p>
+            <div id="rightCard" class="col s12">
+                <!--Current Weather Stats Container-->
+                <div class="container z-depth-5" id="weatherStats">
+                    <h2 id="cityName" style="margin-top: 40px"></h2>
+                    <h6 id="date" style="margin-top: -10px; font-weight: 500;"></h6>
+                    <h6 id="weather" style="font-weight: 300; margin-top: 0px"></h6>
+                    <div id="icon"><img id="wicon" src="" alt="Weather icon" style="width: 60px;">&nbsp</div>
+                    <!-- Dropdown Trigger -->
+  <!-- <a class='dropdown-trigger btn-floating btn-large cyan pulse' href='#' data-target='dropdown1'>MORE</a> -->
+  <!-- Dropdown Structure -->
+  <!-- <ul id='dropdown1' class='dropdown-content'>
+    <li id="humidity"></li>
+    <li class="divider" tabindex="-1"></li>
+    <li id="windSpeed"></li>
+    <li class="divider" tabindex="-1"></li>
+    <li id="uvIndex"></li>
+  </ul> -->
                 </div>
                 <!--5-Day Forecast Container-->
-                <div class="container" id="fiveDayForecast">
-                    <div class="row" id="forecastRow">
+                <div class="container" id="fiveDayForecast" style="margin-top: 30px;">
                         <!--5-Day Forecast Weather Boxes-->
-                        <div id="weatherBoxes" class="col-xs-12 col-sm-10 col-md-5 col-lg-5 col-xl-2"
+                        <div id="weatherBoxes" class="col s12 m8 push-m2 l2 push-l1 xl2 push-xl1"
                             style="text-align: center;">
-                            <div id="weatherBoxDate1" style="font-size: 16px; font-weight: bold;"></div>
+                            <div id="weatherBoxDate1" style="font-size: 16px; font-weight: bold; margin-bottom: 10px"></div>
                             <div id="icon1"><img id="wicon1" src="" alt="Weather icon"></div>
-                            <h1 id="weatherBoxTemp1"></h1>
-                            <div id="weatherBoxHum1"></div>
+                            <h2 id="weatherBoxTemp1" class="weatherTemp"></h2>
+                            <div id="weatherBoxHum1" style="font-size: 12px; font-weight: 200"></div>
                         </div>
-                        <div id="weatherBoxes" class="col-xs-12 col-sm-10 col-md-5 col-lg-5 col-xl-2"
+                        <div id="weatherBoxes" class="col s12 m8 push-m2 l2 push-l1 xl2 push-xl1"
                             style="text-align: center;">
-                            <div id="weatherBoxDate2" style="font-size: 16px; font-weight: bold;"></div>
+                            <div id="weatherBoxDate2" style="font-size: 16px; font-weight: bold; margin-bottom: 10px"></div>
                             <div id="icon2"><img id="wicon2" src="" alt="Weather icon"></div>
-                            <h1 id="weatherBoxTemp2"></h1>
-                            <div id="weatherBoxHum2"></div>
+                            <h2 id="weatherBoxTemp2" class="weatherTemp"></h2>
+                            <div id="weatherBoxHum2" style="font-size: 12px; font-weight: 200"></div>
                         </div>
-                        <div id="weatherBoxes" class="col-xs-12 col-sm-10 col-md-5 col-lg-5 col-xl-2"
+                        <div id="weatherBoxes" class="col s12 m8 push-m2 l2 push-l1 xl2 push-xl1"
                             style="text-align: center;">
-                            <div id="weatherBoxDate3" style="font-size: 16px; font-weight: bold;"></div>
+                            <div id="weatherBoxDate3" style="font-size: 16px; font-weight: bold; margin-bottom: 10px"></div>
                             <div id="icon3"><img id="wicon3" src="" alt="Weather icon"></div>
-                            <h1 id="weatherBoxTemp3"></h1>
-                            <div id="weatherBoxHum3"></div>
+                            <h2 id="weatherBoxTemp3" class="weatherTemp"></h2>
+                            <div id="weatherBoxHum3" style="font-size: 12px; font-weight: 200"></div>
                         </div>
-                        <div id="weatherBoxes" class="col-xs-12 col-sm-10 col-md-5 col-lg-5 col-xl-2"
+                        <div id="weatherBoxes" class="col s12 m8 push-m2 l2 push-l1 xl2 push-xl1"
                             style="text-align: center;">
-                            <div id="weatherBoxDate4" style="font-size: 16px; font-weight: bold;"></div>
+                            <div id="weatherBoxDate4" style="font-size: 16px; font-weight: bold; margin-bottom: 10px"></div>
                             <div id="icon4"><img id="wicon4" src="" alt="Weather icon"></div>
-                            <h1 id="weatherBoxTemp4"></h1>
-                            <div id="weatherBoxHum4"></div>
+                            <h2 id="weatherBoxTemp4" class="weatherTemp"></h2>
+                            <div id="weatherBoxHum4" style="font-size: 12px; font-weight: 200"></div>
                         </div>
-                        <div id="weatherBoxes" class="col-xs-12 col-sm-10 col-md-5 col-lg-5 col-xl-2"
+                        <div id="weatherBoxes" class="col s12 m8 push-m2 l2 push-l1 xl2 push-xl1"
                             style="text-align: center;">
-                            <div id="weatherBoxDate5" style="font-size: 16px; font-weight: bold;"></div>
+                            <div id="weatherBoxDate5" style="font-size: 16px; font-weight: bold; margin-bottom: 10px"></div>
                             <div id="icon5"><img id="wicon5" src="" alt="Weather icon"></div>
-                            <h1 id="weatherBoxTemp5"></h1>
-                            <div id="weatherBoxHum5"></div>
-                        </div>
+                            <h2 id="weatherBoxTemp5" class="weatherTemp"></h2>
+                            <div id="weatherBoxHum5" style="font-size: 12px; font-weight: 200"></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!--Footer-->
-    <div class="footer">
-    </div>
     <!-- Links to Javascript Page, Jquery, and Moment.js -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>      
     <script src="script.js"></script>
 </body>
 
