--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="nav-wrapper">
       <form id="searchForm">
         <div class="input-field">
-          <input id="searchInput" type="search" placeholder="Search" required>
+          <input id="searchInput" type="search" placeholder="" required>
           <label class="label-icon" for="search"><i class="material-icons">search</i></label>
           <i class="material-icons">close</i>
         </div>
@@ -52,6 +52,9 @@
             <h6 id="date" style="margin-top: -10px; font-weight: 500;"></h6>
             <h6 id="weather" style="font-weight: 300; margin-top: 0px"></h6>
             <div id="icon"><img id="wicon" src="" alt="Weather icon" style="width: 60px;">&nbsp</div>
+            <div style="margin-top: -30px; margin-right: 10px; text-align: right"><button style="background-color: transparent; border: transparent; color: inherit;"><span class="material-icons">
+              info
+              </span></button></div>
           </div>
           <div class="flip-card-back">
             <h6 id="tempMin" style="margin-top: 40px"></h6>
